--- a/src/main/resources/view/bookmanagement.fxml
+++ b/src/main/resources/view/bookmanagement.fxml
@@ -12,27 +12,28 @@
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.BookManagementFormController">
     <children>
         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#2a2c73" height="66.0" layoutY="-2.0" stroke="BLACK" strokeType="INSIDE" width="600.0" />
-        <TextField fx:id="txtID" layoutX="147.0" layoutY="82.0" promptText="ID" />
-        <TextField fx:id="txtName" layoutX="305.0" layoutY="82.0" promptText="Name" />
-        <TextField fx:id="txtAddress" layoutX="147.0" layoutY="124.0" promptText="Address" />
-        <TextField fx:id="txtSalary" layoutX="305.0" layoutY="124.0" promptText="Salary" />
-        <Button layoutX="167.0" layoutY="166.0" mnemonicParsing="false" onAction="#btnAddCustomerAction" prefHeight="25.0" prefWidth="59.0" text="Add" />
-        <TableView fx:id="tbCustomers" layoutX="54.0" layoutY="206.0" prefHeight="145.0" prefWidth="493.0">
+        <TextField fx:id="txtBookId" layoutX="12.0" layoutY="82.0" promptText="BookID" />
+        <TextField fx:id="txtTitle" layoutX="337.0" layoutY="82.0" promptText="Title" />
+        <TextField fx:id="txtAuthor" layoutX="147.0" layoutY="124.0" promptText="Author" />
+        <TextField fx:id="txtGenre" layoutX="305.0" layoutY="124.0" promptText="Genre" />
+        <Button layoutX="167.0" layoutY="166.0" mnemonicParsing="false" onAction="#btnAddBookAction" prefHeight="25.0" prefWidth="59.0" text="Add" />
+        <TableView fx:id="tbBooks" layoutX="54.0" layoutY="206.0" prefHeight="145.0" prefWidth="493.0">
             <columns>
-                <TableColumn fx:id="colId" prefWidth="48.0" text="Id" />
-                <TableColumn fx:id="colName" prefWidth="152.0" text="Name" />
-                <TableColumn fx:id="colAddress" prefWidth="156.0" text="Address" />
-                <TableColumn fx:id="colSalary" prefWidth="136.0" text="Salary" />
+                <TableColumn fx:id="colISBN" prefWidth="48.0" text="ISBN" />
+                <TableColumn fx:id="colTitle" prefWidth="152.0" text="Title" />
+                <TableColumn fx:id="colAuthor" prefWidth="156.0" text="Author" />
+                <TableColumn fx:id="colGenre" prefWidth="136.0" text="Genre" />
             </columns>
         </TableView>
-        <Label layoutX="141.0" layoutY="9.0" text="Customer Management" textFill="WHITE">
+        <Label layoutX="160.0" layoutY="9.0" text="Book Management" textFill="WHITE">
             <font>
                 <Font name="System Bold" size="30.0" />
             </font>
         </Label>
-        <Button layoutX="236.0" layoutY="166.0" mnemonicParsing="false" onAction="#btnSearchCustomerAction" prefHeight="25.0" prefWidth="59.0" text="Search" />
+        <Button layoutX="236.0" layoutY="166.0" mnemonicParsing="false" onAction="#btnSearchBookAction" prefHeight="25.0" prefWidth="59.0" text="Search" />
         <Button layoutX="305.0" layoutY="166.0" mnemonicParsing="false" onAction="#btnUpdateCustomerAction" prefHeight="25.0" prefWidth="59.0" text="Update" />
         <Button layoutX="374.0" layoutY="166.0" mnemonicParsing="false" onAction="#btnDeleteCustomerAction" prefHeight="25.0" prefWidth="59.0" text="Delete" />
-        <Button layoutX="488.0" layoutY="361.0" mnemonicParsing="false" onAction="#btnReloadCustomersAction" prefHeight="25.0" prefWidth="59.0" text="Reload" />
+        <Button layoutX="488.0" layoutY="361.0" mnemonicParsing="false" onAction="#btnReloadBooksAction" prefHeight="25.0" prefWidth="59.0" text="Reload" />
+      <TextField fx:id="txtISBN" layoutX="171.0" layoutY="80.0" promptText="ISBN" />
     </children>
 </AnchorPane>
