--- a/src/main/resources/view/bookmanagement.fxml
+++ b/src/main/resources/view/bookmanagement.fxml
@@ -10,23 +10,24 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.BookManagementFormController">
+<AnchorPane prefHeight="475.0" prefWidth="727.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.BookManagementFormController">
     <children>
-        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#2a2c73" height="66.0" layoutY="-2.0" stroke="BLACK" strokeType="INSIDE" width="600.0" />
+        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#2a2c73" height="70.0" layoutY="-2.0" stroke="BLACK" strokeType="INSIDE" width="727.0" />
         <TextField fx:id="txtBookId" layoutX="12.0" layoutY="82.0" promptText="BookID" />
         <TextField fx:id="txtTitle" layoutX="337.0" layoutY="82.0" promptText="Title" />
         <TextField fx:id="txtAuthor" layoutX="93.0" layoutY="124.0" promptText="Author" />
         <TextField fx:id="txtGenre" layoutX="268.0" layoutY="124.0" promptText="Genre" />
         <Button layoutX="167.0" layoutY="166.0" mnemonicParsing="false" onAction="#btnAddBookAction" prefHeight="25.0" prefWidth="59.0" text="Add" />
-        <TableView fx:id="tbBooks" layoutX="54.0" layoutY="206.0" prefHeight="145.0" prefWidth="493.0">
+        <TableView fx:id="tblBooks" layoutX="62.0" layoutY="246.0" prefHeight="145.0" prefWidth="600.0">
             <columns>
-                <TableColumn fx:id="colISBN" prefWidth="48.0" text="ISBN" />
-                <TableColumn fx:id="colTitle" prefWidth="152.0" text="Title" />
-                <TableColumn fx:id="colAuthor" prefWidth="156.0" text="Author" />
-                <TableColumn fx:id="colGenre" prefWidth="136.0" text="Genre" />
+                <TableColumn fx:id="colBookID" prefWidth="83.0" text="BookID" />
+                <TableColumn fx:id="colISBN" prefWidth="117.0" text="ISBN" />
+                <TableColumn fx:id="colTitle" prefWidth="156.0" text="Title" />
+                <TableColumn fx:id="colAuthor" prefWidth="136.0" text="Author" />
+            <TableColumn fx:id="colGenre" prefWidth="109.0" text="Genre" />
             </columns>
         </TableView>
-        <Label layoutX="160.0" layoutY="9.0" text="Book Management" textFill="WHITE">
+        <Label layoutX="238.0" layoutY="9.0" text="Book Management" textFill="WHITE">
             <font>
                 <Font name="System Bold" size="30.0" />
             </font>
@@ -34,7 +35,7 @@
         <Button layoutX="236.0" layoutY="166.0" mnemonicParsing="false" onAction="#btnSearchBookAction" prefHeight="25.0" prefWidth="59.0" text="Search" />
         <Button layoutX="305.0" layoutY="166.0" mnemonicParsing="false" onAction="#btnUpdateCustomerAction" prefHeight="25.0" prefWidth="59.0" text="Update" />
         <Button layoutX="374.0" layoutY="166.0" mnemonicParsing="false" onAction="#btnDeleteCustomerAction" prefHeight="25.0" prefWidth="59.0" text="Delete" />
-        <Button layoutX="426.0" layoutY="361.0" mnemonicParsing="false" onAction="#btnReloadBooksAction" prefHeight="25.0" prefWidth="121.0" text="View All Books" />
+        <Button layoutX="536.0" layoutY="421.0" mnemonicParsing="false" onAction="#btnReloadBooksAction" prefHeight="25.0" prefWidth="121.0" text="View All Books" />
       <TextField fx:id="txtISBN" layoutX="171.0" layoutY="80.0" promptText="ISBN" />
       <JFXComboBox fx:id="cmbAvailability" layoutX="438.0" layoutY="124.0" promptText="Availability Status" />
     </children>
