--- a/src/main/resources/view/addbook.fxml
+++ b/src/main/resources/view/addbook.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="475.0" prefWidth="727.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.BookManagementFormController">
+<AnchorPane prefHeight="475.0" prefWidth="727.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AddBookFormController">
     <children>
         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#2a2c73" height="70.0" layoutY="-2.0" stroke="BLACK" strokeType="INSIDE" width="727.0" />
         <TextField fx:id="txtBookId" layoutX="12.0" layoutY="82.0" promptText="BookID" />
