--- a/src/main/resources/view/dashboard.fxml
+++ b/src/main/resources/view/dashboard.fxml
@@ -5,7 +5,6 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane prefHeight="506.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.DashboardFormController">
    <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#0e1d2c" height="506.0" stroke="BLACK" strokeType="INSIDE" width="204.0" />
@@ -15,5 +14,10 @@
          </font>
       </Button>
       <AnchorPane fx:id="loadContent" layoutX="204.0" layoutY="-1.0" prefHeight="506.0" prefWidth="587.0" />
+      <Button layoutX="25.0" layoutY="136.0" mnemonicParsing="false" onAction="#btnManageMembersOnAction" prefHeight="43.0" prefWidth="155.0" style="-fx-background-color: #27ae60;" text="Manage Members" textFill="#eeeeee">
+         <font>
+            <Font name="System Bold Italic" size="16.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
