--- a/src/main/resources/view/managememberinfo.fxml
+++ b/src/main/resources/view/managememberinfo.fxml
@@ -3,32 +3,43 @@
 <?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ManageMembersFormController">
+<AnchorPane prefHeight="539.0" prefWidth="763.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ManageMembersFormController">
    <children>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#072846" height="53.0" stroke="BLACK" strokeType="INSIDE" width="600.0" />
-      <Label layoutX="226.0" layoutY="12.0" text="Manage Members" textFill="#f5f5f5">
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#072846" height="53.0" stroke="BLACK" strokeType="INSIDE" width="811.0" />
+      <Label layoutX="314.0" layoutY="12.0" text="Manage Members" textFill="#f5f5f5">
          <font>
             <Font name="System Bold Italic" size="20.0" />
          </font>
       </Label>
       <Label layoutX="98.0" layoutY="102.0" text="Member Name:" />
-      <Label layoutX="147.0" layoutY="140.0" text="Email:" />
-      <Label layoutX="87.0" layoutY="176.0" text="Contact Number:" />
-      <Label layoutX="80.0" layoutY="216.0" text="Membership Date:" />
-      <Label layoutX="76.0" layoutY="258.0" text="Membership Status:" />
+      <Label layoutX="150.0" layoutY="149.0" text="Email:" />
+      <Label layoutX="87.0" layoutY="198.0" text="Contact Number:" />
+      <Label layoutX="451.0" layoutY="149.0" text="Membership Date:" />
+      <Label layoutX="447.0" layoutY="198.0" text="Membership Status:" />
       <TextField fx:id="txtMemberName" layoutX="197.0" layoutY="98.0" prefHeight="25.0" prefWidth="218.0" />
-      <TextField fx:id="txtEmail" layoutX="197.0" layoutY="136.0" prefHeight="25.0" prefWidth="218.0" />
-      <TextField fx:id="txtPhoneNumber" layoutX="197.0" layoutY="172.0" prefHeight="25.0" prefWidth="218.0" />
-      <TextField fx:id="txtMembershipDate" layoutX="194.0" layoutY="212.0" prefHeight="25.0" prefWidth="218.0" />
-      <TextField fx:id="txtMembershipStatus" layoutX="197.0" layoutY="254.0" prefHeight="25.0" prefWidth="218.0" />
-      <Button layoutX="197.0" layoutY="329.0" mnemonicParsing="false" onAction="#btnUpdateMemberOnAction" prefHeight="25.0" prefWidth="75.0" text="Update" />
-      <Button layoutX="300.0" layoutY="329.0" mnemonicParsing="false" onAction="#btnDeleteMemberOnAction" prefHeight="25.0" prefWidth="69.0" text="Delete" />
-      <JFXTextField layoutX="451.0" layoutY="65.0" onAction="#txtSearchMemberOnAction" promptText="Search Member" />
+      <TextField fx:id="txtEmail" layoutX="197.0" layoutY="145.0" prefHeight="25.0" prefWidth="218.0" />
+      <TextField fx:id="txtPhoneNumber" layoutX="197.0" layoutY="194.0" prefHeight="25.0" prefWidth="218.0" />
+      <TextField fx:id="txtMembershipDate" layoutX="565.0" layoutY="145.0" prefHeight="25.0" prefWidth="218.0" />
+      <TextField fx:id="txtMembershipStatus" layoutX="565.0" layoutY="194.0" prefHeight="25.0" prefWidth="218.0" />
+      <Button layoutX="207.0" layoutY="245.0" mnemonicParsing="false" onAction="#btnUpdateMemberOnAction" prefHeight="25.0" prefWidth="75.0" text="Update" />
+      <Button layoutX="314.0" layoutY="245.0" mnemonicParsing="false" onAction="#btnDeleteMemberOnAction" prefHeight="25.0" prefWidth="69.0" text="Delete" />
+      <JFXTextField layoutX="640.0" layoutY="66.0" onAction="#txtSearchMemberOnAction" promptText="Search Member" />
+      <TableView fx:id="tblMembers" layoutX="178.0" layoutY="284.0" prefHeight="200.0" prefWidth="585.0">
+        <columns>
+          <TableColumn fx:id="colMemberId" prefWidth="75.0" text="Member ID" />
+          <TableColumn fx:id="colMemberName" prefWidth="96.0" text="Name" />
+            <TableColumn fx:id="colEmail" prefWidth="120.0" text="email" />
+            <TableColumn fx:id="colContactNumber" prefWidth="145.0" text="contact Number" />
+            <TableColumn fx:id="colMemberShipDate" minWidth="1.0" prefWidth="148.0" text="Membership Date" />
+        </columns>
+      </TableView>
+      <Button layoutX="629.0" layoutY="491.0" mnemonicParsing="false" onAction="#btnViewAllMembersOnAction" prefHeight="25.0" prefWidth="116.0" text="view All Members" />
    </children>
 </AnchorPane>
