load member data & book data to borrowed section

--- a/src/main/resources/view/dashboard.fxml
+++ b/src/main/resources/view/dashboard.fxml
@@ -24,5 +24,10 @@
             <Font name="System Bold Italic" size="16.0" />
          </font>
       </Button>
+      <Button layoutX="25.0" layoutY="268.0" mnemonicParsing="false" onAction="#btnBorrowBooksOnAction" prefHeight="43.0" prefWidth="155.0" style="-fx-background-color: #27ae60;" text="Borrow Books" textFill="#eeeeee">
+         <font>
+            <Font name="System Bold Italic" size="16.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
