--- a/src/main/resources/view/borrowform.fxml
+++ b/src/main/resources/view/borrowform.fxml
@@ -12,9 +12,9 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="489.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.BorrowFormController">
+<AnchorPane prefHeight="489.0" prefWidth="732.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.BorrowFormController">
     <children>
-        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#a768ae" height="66.0" layoutY="-2.0" stroke="BLACK" strokeType="INSIDE" width="600.0" />
+        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#419051" height="66.0" layoutY="-2.0" stroke="BLACK" strokeType="INSIDE" width="732.0" />
         <TextField fx:id="txtName" disable="true" layoutX="205.0" layoutY="82.0" promptText="Member Name">
          <font>
             <Font name="System Bold Italic" size="12.0" />
@@ -64,5 +64,10 @@
         </Button>
       <DatePicker fx:id="date_BorrowDate" layoutX="38.0" layoutY="172.0" promptText="Borrow Date" />
       <DatePicker fx:id="date_DueDate" layoutX="242.0" layoutY="172.0" promptText="Return Date" />
+      <TextField fx:id="txtAvailability" disable="true" layoutX="448.0" layoutY="158.0" prefHeight="0.0" prefWidth="160.0" promptText="Availability">
+         <font>
+            <Font name="System Bold Italic" size="12.0" />
+         </font>
+      </TextField>
     </children>
 </AnchorPane>
