--- a/src/main/resources/view/dashboard.fxml
+++ b/src/main/resources/view/dashboard.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
@@ -13,7 +14,14 @@
             <Font name="System Bold Italic" size="16.0" />
          </font>
       </Button>
-      <AnchorPane fx:id="loadContent" layoutX="204.0" layoutY="-1.0" prefHeight="580.0" prefWidth="850.0" />
+      <AnchorPane fx:id="loadContent" layoutX="204.0" layoutY="-1.0" prefHeight="580.0" prefWidth="850.0">
+         <children>
+            <Label layoutX="296.0" layoutY="38.0" text="BookLib-Library Manager" textFill="#2dc656">
+               <font>
+                  <Font name="System Bold Italic" size="20.0" />
+               </font>
+            </Label>
+         </children></AnchorPane>
       <Button layoutX="25.0" layoutY="212.0" mnemonicParsing="false" onAction="#btnAddMemberOnAction" prefHeight="43.0" prefWidth="155.0" style="-fx-background-color: #27ae60;" text="Add Member" textFill="#eeeeee">
          <font>
             <Font name="System Bold Italic" size="16.0" />
