--- a/src/main/resources/view/dashboard.fxml
+++ b/src/main/resources/view/dashboard.fxml
@@ -2,6 +2,8 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
@@ -16,11 +18,16 @@
       </Button>
       <AnchorPane fx:id="loadContent" layoutX="204.0" layoutY="-1.0" prefHeight="580.0" prefWidth="850.0">
          <children>
-            <Label layoutX="296.0" layoutY="38.0" text="BookLib-Library Manager" textFill="#2dc656">
+            <Label layoutX="314.0" layoutY="38.0" text="BookLib-Library Manager" textFill="#5d4aa8">
                <font>
                   <Font name="System Bold Italic" size="20.0" />
                </font>
             </Label>
+            <ImageView fitHeight="467.0" fitWidth="491.0" layoutX="201.0" layoutY="81.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/LIBRARYMANAGEMENT-ICON.png" />
+               </image>
+            </ImageView>
          </children></AnchorPane>
       <Button layoutX="25.0" layoutY="212.0" mnemonicParsing="false" onAction="#btnAddMemberOnAction" prefHeight="43.0" prefWidth="155.0" style="-fx-background-color: #27ae60;" text="Add Member" textFill="#eeeeee">
          <font>
